--- a/templates/components/main/sidebar.html.twig
+++ b/templates/components/main/sidebar.html.twig
@@ -35,6 +35,17 @@
                     </span>
                 </a>
             </div>
+            <div class="menu-item">
+                <a class="menu-link rounded-[9px] border border-transparent menu-item-active:border-gray-200 menu-item-active:bg-light menu-link-hover:bg-light menu-link-hover:border-gray-200 w-[62px] h-[60px] flex flex-col justify-center items-center gap-1 p-2"
+                   href="{{ path("app_register") }}">
+                    <span class="menu-icon menu-item-here:text-primary menu-item-active:text-primary menu-link-hover:text-primary text-gray-600">
+                        <i class="ki-filled ki-user"></i>
+                    </span>
+                    <span class="menu-title text-xs menu-item-here:text-primary menu-item-active:text-primary menu-link-hover:text-primary text-gray-600 font-medium">
+                        Connexion
+                    </span>
+                </a>
+            </div>
             <div class="menu-item" data-menu-item-offset="-10px, 14px" data-menu-item-overflow="true"
                  data-menu-item-placement="right-start" data-menu-item-toggle="dropdown"
                  data-menu-item-trigger="click|lg:hover">
