login and logout ok

--- a/templates/auth/register.html.twig
+++ b/templates/auth/register.html.twig
@@ -16,7 +16,7 @@
 						<span class="text-2sm text-gray-700 me-1.5">
 							Vous avez déjà un compte ?
 						</span>
-						<a class="text-2sm link" href="{{ path('auth.login') }}">
+						<a class="text-2sm link" href="{{ path('app_login') }}">
 							Me connecter
 						</a>
 					</div>
