--- a/templates/components/home/booksReading.html.twig
+++ b/templates/components/home/booksReading.html.twig
@@ -30,22 +30,23 @@
                     </tr>
                     </thead>
                     <tbody>
-                    {% for bookRead in booksRead %}
+                    {% for bookRead in booksReading %}
                         <tr>
                             <td>
                                 <div class="flex flex-col gap-2">
                                     <a class="leading-none font-medium text-sm text-gray-900 hover:text-primary"
-                                       href="#">
-                                        ERREUR : Impossible de récupérer le titre
+                                       href="#" data-modal-toggle="#edit_modal" data-bookread-id="{{ bookRead.id }}">
+                                        {{ bookRead.book.name}}
                                     </a>
-                                    <span class="text-2sm text-gray-700 font-normal leading-3">
-                                    ERREUR : Impossible de récupérer la description
+                                    <span class="text-2sm text-gray-700 font-normal leading-3" id="book_description">
+                                    {{ bookRead.description }}
                                 </span>
                                 </div>
                             </td>
                             <td class="text-end">
                                 {{ bookRead.updatedAt|date('d/m/Y à H:i') }}
                             </td>
+                            
                         </tr>
                     {% endfor %}
                     </tbody>
