--- a/templates/components/main/sidebar.html.twig
+++ b/templates/components/main/sidebar.html.twig
@@ -81,7 +81,7 @@
         </div>
         <!-- End of Sidebar Menu -->
     </div>
-    <div class="flex flex-col gap-5 items-center shrink-0 pb-4" id="sidebar_footer">
+    {# <div class="flex flex-col gap-5 items-center shrink-0 pb-4" id="sidebar_footer">
         <div class="menu" data-menu="true">
             <div class="menu-item" data-menu-item-offset="-20px, 28px" data-menu-item-overflow="true"
                  data-menu-item-placement="right-end" data-menu-item-toggle="dropdown"
@@ -170,5 +170,5 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> #}
 </div>
