--- a/templates/components/home/booksRead.html.twig
+++ b/templates/components/home/booksRead.html.twig
@@ -3,10 +3,12 @@
 		<h3 class="card-title">
 			Mes lectures terminées
 		</h3>
-		<div class="input input-sm max-w-48">
-			<i class="ki-filled ki-magnifier"></i>
-			<input data-datatable-search="#read-books-table" placeholder="Rechercher" type="text"/>
-		</div>
+		<form method="get" action="{{ path('app.home') }}">
+            <div class="input-group">
+                <input name="searchFinished" id="searchFinished" placeholder="Rechercher" type="text" value="{{ app.request.query.get('searchFinished') }}"/>
+                <button type="submit"><i class="ki-filled ki-magnifier"></i></button>
+            </div>
+        </form>
 	</div>
 	<div class="card-body">
 		<div id="read-books-table" data-datatable="true" data-datatable-page-size="5">
