--- a/templates/components/home/booksReading.html.twig
+++ b/templates/components/home/booksReading.html.twig
@@ -5,7 +5,7 @@
         </h3>
         <form method="get" action="{{ path('app.home') }}">
             <div class="input-group">
-                <input name="search" id="search" placeholder="Rechercher" type="text" value="{{ app.request.query.get('search') }}"/>
+                <input name="search" id="search" placeholder="Rechercher" type="text" value="{{ searchTerm }}"/>
                 <button type="submit"><i class="ki-filled ki-magnifier"></i></button>
             </div>
         </form>
