fix html tag in bookread description

--- a/templates/components/home/booksReading.html.twig
+++ b/templates/components/home/booksReading.html.twig
@@ -40,7 +40,7 @@
                                         {{ bookRead.book.name}}
                                     </a>
                                     <span class="text-2sm text-gray-700 font-normal leading-3" id="book_description">
-                                    {{ bookRead.description }}
+                                    {{ bookRead.description|raw }}
                                 </span>
                                 </div>
                             </td>
