add new book ok

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -72,6 +72,7 @@
     {% include 'modals/search.html.twig' %}
     {% include 'modals/book.html.twig' %}
     {% include 'modals/edit.html.twig' %}
+    {% include 'modals/newBook.html.twig' %}
     <!-- End of Page -->
 
     <!-- Scripts -->
