--- a/templates/modals/book.html.twig
+++ b/templates/modals/book.html.twig
@@ -2,6 +2,7 @@
     <div class="modal-content max-w-[600px] top-[15%]">
         <div class="modal-header py-4 px-5">
             <h3 class="modal-title">Ma lecture</h3>
+            <a href="#" class="text-blue-500 hover:text-blue-700" data-modal-toggle="#newBook_modal">Ajouter un nouveau livre</a>
         </div>
         <div class="modal-body p-0 pb-5">
             <div class="scrollable-y-auto" data-scrollable="true" data-scrollable-max-height="auto"
@@ -21,7 +22,8 @@
                             <label class="form-label font-normal text-gray-900">Mes notes</label>
                             <div class="flex flex-col w-full gap-1">
                                 <textarea name="comment" class="textarea"
-                                          placeholder="Notez-ici les idées importantes de l'oeuvre."></textarea>
+                                    placeholder="Notez-ici les idées importantes de l'oeuvre.">
+                                </textarea>
                             </div>
                         </div>
 
