--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -76,6 +76,7 @@
     <!-- End of Page -->
 
     <!-- Scripts -->
+    {# <script src="{{ asset('js/bookForm.js') }}"></script> #}
     <script src="{{ asset('metronic/js/core.bundle.js') }}"></script>
     <script src="{{ asset('metronic/vendors/apexcharts/apexcharts.min.js') }}"></script>
     <script src="{{ asset('metronic/js/widgets/general.js') }}"></script>
